# voxel-engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
.cache/clangd/index/: cgltf.h.9D35711A1DDE803F.idx  cocoa_init.m.7BFD9887F366D75E.idx  cocoa_joystick.h.E7C7F5BE86A384CA.idx  cocoa_joystick.m.4F0702C65E25D104.idx  cocoa_monitor.m.C3FE5381B497A25E.idx  cocoa_platform.h.CA908AD29F926908.idx  cocoa_time.c.8AB1279BBE7CA6AF.idx  cocoa_time.h.6E53729EA7B4020E.idx  cocoa_window.m.B9131F7BBDC32C2D.idx  config.h.B770F35C0E649C45.idx  context.c.C4A2E78204E83392.idx  dr_mp3.h.63A45B6527158DE6.idx  dr_wav.h.6B00B669104C4218.idx  egl_context.c.A9505F4E5C2B4D84.idx  glad.h.1624A49960E02614.idx  glfw3.h.895009D879565E4D.idx  glfw3native.h.99309E34C8FA00A8.idx  init.c.8A496661A82C33A3.idx  input.c.581B253E96814DDA.idx  internal.h.CC4144AA240FB80B.idx  jar_mod.h.D643F11E791AE25B.idx  jar_xm.h.A2A39257E4D4A587.idx  m3d.h.30647E9531160B92.idx  main.cpp.027CEE4255501BEB.idx  mappings.h.5AC1A03CAFDF9105.idx  miniaudio.h.F53D2FA1E2A064C1.idx  monitor.c.507CBFAEA026C866.idx  msf_gif.h.1E3BADB9701F9917.idx  nsgl_context.m.B8990699A37FD43E.idx  null_init.c.813CBEEAA19AF40A.idx  null_joystick.c.C04DCFD10BDEF58D.idx  null_joystick.h.06435FFCBFFEF335.idx  null_monitor.c.7902AF185FA265B2.idx  null_platform.h.FCB9EA4A9CB651DC.idx  null_window.c.310F8DDF3D0E06F2.idx  osmesa_context.c.DCDA81DB738238E5.idx  par_shapes.h.5A05E1DC0D3A4552.idx  platform.c.88C6C2148FBC0EC6.idx  platform.h.8DBAF3A6BD75AC40.idx  posix_module.c.E6EE19EDA26CA34A.idx  (+35 more)
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/learnopengl/: entity.h  filesystem.h  mesh.h  model.h  model_animation.h  shader.h  shader_c.h  shader_m.h  shader_s.h  shader_t.h
src/: Block.h  Camera.h  Chunk.h  ChunkManager.h  ChunkMesh.h  Component.h  Ecs.h  Engine.h  Frustum.h  Mesh.h  PhysicsSystem.cpp  PhysicsSystem.h  main.cpp  shader.h  smolgl.h  utils.h
src/shaders/: camera.vert  shader.frag  shader.vert  text.frag
